<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ariacmaster</name>
  <version>0.0.0</version>
  <description>Example package for ARIAC 2025</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <license>BSD-3-Clause</license>

  <depend>moveit_py</depend>
  <depend>moveit_configs_utils</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
